# zst-webapp-scraper

./: Cargo.toml  README.md  config.json  sqlite.db
src/: lib.rs  main.rs
src/controllers/: mod.rs  plan_controller.rs
src/controllers/plan_controller/: classrooms.rs  mod.rs  news.rs  plan.rs  plans.rs  teachers.rs
src/entities/: announcement.rs  class.rs  mod.rs  news.rs  table.rs
src/utils/: class_to_id.rs  list.rs  mod.rs  scraper.rs  str_convert.rs
